--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -6,9 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><!-- TODO: put your title here --></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/codeup-design.css">
 </head>
 <body>
 
+<div class="nav-background bg-light"></div>
+<div class="wrapper">
+    <nav class="navbar navbar-light">
+        <div class="container-fluid">
+            <ul class="nav w-100 justify-content-center">
+                <li class="order-md-3 order-lg-0 mr-lg-auto">
+                    <a href="#" class="navbar-brand d-block w-100 mb-2 m-md-0 text-center">
+                        <img class="" width="105px" src="img/codeup-design/logo-cropped.png" alt="Codeup Design logo">
+                        <div class="brand-name d-block d-lg-inline text-center w-100">codeup design</div>
+                    </a>
+                </li>
+                <div class="w-100 d-md-none"></div><!-- used to force line break in flex items for mobile -->
+                <li class="nav-item order-md-1 order-lg-1 mt-md-5">
+                    <a class="nav-link text-uppercase px-2 px-md-3" href="">Services</a>
+                </li>
+                <li class="nav-item order-md-2 order-lg-2 mt-md-5">
+                    <a class="nav-link text-uppercase px-2 pl-md-3 pr-md-0 px-lg-3" href="">Work</a>
+                </li>
+                <li class="nav-item order-md-4 order-lg-3 mt-md-5">
+                    <a class="nav-link text-uppercase px-2 pl-md-0 pr-md-3 px-lg-3" href="">Blog</a>
+                </li>
+                <li class="nav-item order-md-5 order-lg-4 mt-md-5">
+                    <a class="nav-link text-uppercase px-2 px-md-3" href="">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
