--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -38,8 +38,170 @@
         </div>
     </nav>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<div class="container">
+    <h1>Visual Design & Web Development</h1>
+
+    <h3>From Park City, Utah</h3>
+
+    <div class="row">
+        <div class="col-6 col-md-4">
+            <h2>Design</h2>
+            <h2>Support</h2>
+        </div>
+        <div class="col-6 col-md-4">
+            <h2>Develop</h2>
+            <h2>Host</h2>
+        </div>
+    </div>
+
+    <h6>Selected Work</h6>
+
+    <div class="row">
+
+        <div class="col-12 col-md-6 col-lg-4">
+
+            <img src="../img/assets/images/apple-ipad.jpg">
+
+            <div class="img-description">
+                <div class="featured-project">
+
+                        <p>Featured Project</p>
+
+                </div>
+                <div class="icons">
+
+                    <span class="round red-d"><strong>D</strong></span>
+
+                    <span class="round orange-d"><strong>D</strong></span>
+
+                    <span class="round green-s"><strong>S</strong></span>
+
+                    <span class="round blue-h"><strong>H</strong></span>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+
+            <img src="../img/assets/images/macbook.jpg">
+
+            <div class="img-description">
+                <div class="featured-project">
+
+                    <p>Featured Project</p>
+
+                </div>
+                <div class="icons">
+
+                    <span class="round red-d"><strong>D</strong></span>
+
+                    <span class="round orange-d"><strong>D</strong></span>
+
+                    <span class="round green-s"><strong>S</strong></span>
+
+                    <span class="round blue-h"><strong>H</strong></span>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+
+            <div class="article-group">
+                <div class="article">
+
+<!--                    image-->
+
+                    <h3>The Admin Bar and Absolute Positioning</h3>
+
+                </div>
+                <div class="article">
+
+<!--                    image-->
+
+                    <h3>Nibbler Awesome Website Testing</h3>
+
+
+                </div>
+                <div class="article">
+
+<!--                    image-->
+
+                    <h3>How to Get Google to Like You</h3>
+
+
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+
+            <img src="../img/assets/images/head.jpg">
+
+            <div class="img-description">
+                <div class="featured-project">
+
+                    <p>Featured Project</p>
+
+                </div>
+                <div class="icons">
+
+                    <span class="round red-d"><strong>D</strong></span>
+
+                    <span class="round orange-d"><strong>D</strong></span>
+
+                    <span class="round green-s"><strong>S</strong></span>
+
+                    <span class="round blue-h"><strong>H</strong></span>
+
+                </div>
+            </div>
+
+        </div>
+
+        <h6>The Last</h6>
+
+        <div class="col-12 col-md-6 col-lg-4">
+
+            <img src="../img/assets/images/security.jpg">
+
+            <div class="img-description">
+                <div class="featured-project">
+
+                    <p>Featured Project</p>
+
+                </div>
+                <div class="icons">
+
+                    <span class="round red-d"><strong>D</strong></span>
+
+                    <span class="round orange-d"><strong>D</strong></span>
+
+                    <span class="round green-s"><strong>S</strong></span>
+
+                    <span class="round blue-h"><strong>H</strong></span>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+
+    <!--        twitter-->
+
+            <h6>Last Tweet</h6>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores doloremque necessitatibus repellendus sequi sint.</p>
+
+        </div>
+
+    </div>
+
+
+</div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
