--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -7,6 +7,7 @@
     <title><!-- TODO: put your title here --></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/codeup-design.css">
+    <script src="https://kit.fontawesome.com/36f035c426.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -17,7 +18,7 @@
             <ul class="nav w-100 justify-content-center">
                 <li class="order-md-3 order-lg-0 mr-lg-auto">
                     <a href="#" class="navbar-brand d-block w-100 mb-2 m-md-0 text-center">
-                        <img class="" width="105px" src="img/codeup-design/logo-cropped.png" alt="Codeup Design logo">
+                        <img class="" width="105px" src="../img/assets/logo.png" alt="Codeup Design logo">
                         <div class="brand-name d-block d-lg-inline text-center w-100">codeup design</div>
                     </a>
                 </li>
@@ -45,12 +46,12 @@
 
     <div class="row">
         <div class="col-6 col-md-4">
-            <h2>Design</h2>
-            <h2>Support</h2>
+            <h2 class="large-round" id="red-design">Design</h2>
+            <h2 class="large-round" id="yellow-develop">Support</h2>
         </div>
         <div class="col-6 col-md-4">
-            <h2>Develop</h2>
-            <h2>Host</h2>
+            <h2 class="large-round" id="green-support">Develop</h2>
+            <h2 class="large-round" id="blue-host">Host</h2>
         </div>
     </div>
 
@@ -58,9 +59,11 @@
 
     <div class="row">
 
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 image-box">
 
-            <img src="../img/assets/images/apple-ipad.jpg">
+
+               <!--      THE LAPTOP WITH THE APPLES ON IT      -->
+            <img src="../img/assets/images/apple-ipad.jpg" class="large-image">
 
             <div class="img-description">
                 <div class="featured-project">
@@ -82,9 +85,12 @@
             </div>
 
         </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 image-box">
 
-            <img src="../img/assets/images/macbook.jpg">
+
+
+                <!--     THE LAPTOP WITH THE KEYBOARD AND IPAD ON TABLE       -->
+            <img src="../img/assets/images/macbook.jpg" class="large-image">
 
             <div class="img-description">
                 <div class="featured-project">
@@ -106,28 +112,25 @@
             </div>
 
         </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 image-box">
 
             <div class="article-group">
                 <div class="article">
 
-<!--                    image-->
-
+                    <img src="../img/assets/images/mobile-phone.jpg" class="small-image">
                     <h3>The Admin Bar and Absolute Positioning</h3>
 
                 </div>
                 <div class="article">
 
-<!--                    image-->
-
+                    <img src="../img/assets/images/head.jpg" class="small-image">
                     <h3>Nibbler Awesome Website Testing</h3>
 
 
                 </div>
                 <div class="article">
 
-<!--                    image-->
-
+                    <img src="../img/assets/images/google-search.jpg" class="small-image">
                     <h3>How to Get Google to Like You</h3>
 
 
@@ -135,36 +138,12 @@
             </div>
 
         </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4 image-box">
 
-            <img src="../img/assets/images/head.jpg">
 
-            <div class="img-description">
-                <div class="featured-project">
 
-                    <p>Featured Project</p>
-
-                </div>
-                <div class="icons">
-
-                    <span class="round red-d"><strong>D</strong></span>
-
-                    <span class="round orange-d"><strong>D</strong></span>
-
-                    <span class="round green-s"><strong>S</strong></span>
-
-                    <span class="round blue-h"><strong>H</strong></span>
-
-                </div>
-            </div>
-
-        </div>
-
-        <h6>The Last</h6>
-
-        <div class="col-12 col-md-6 col-lg-4">
-
-            <img src="../img/assets/images/security.jpg">
+             <!--     THE FACE WITH THE BINARY       -->
+            <img src="../img/assets/images/man.jpg" class="large-image">
 
             <div class="img-description">
                 <div class="featured-project">
@@ -186,11 +165,39 @@
             </div>
 
         </div>
+
+<!--        <h6>The Last</h6>-->
+
         <div class="col-12 col-md-6 col-lg-4">
 
-    <!--        twitter-->
 
-            <h6>Last Tweet</h6>
+
+              <!--     THE SECURITY BUTTON       -->
+            <img src="../img/assets/images/security.jpg" class="large-image">
+
+            <div class="img-description">
+                <div class="featured-project">
+
+                    <p>Featured Project</p>
+
+                </div>
+                <div class="icons">
+
+                    <span class="round red-d"><strong>D</strong></span>
+
+                    <span class="round orange-d"><strong>D</strong></span>
+
+                    <span class="round green-s"><strong>S</strong></span>
+
+                    <span class="round blue-h"><strong>H</strong></span>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+
+            <h6><i class="fab fa-twitter"></i>Last Tweet</h6>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores doloremque necessitatibus repellendus sequi sint.</p>
 
