applied general layout

--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -44,12 +44,12 @@
 
     <h3>From Park City, Utah</h3>
 
-    <div class="row">
-        <div class="col-6 col-md-4">
+    <div class="row iconsAcrossTop">
+        <div class="col-6 col-lg-3">
             <h2 class="large-round" id="red-design">Design</h2>
             <h2 class="large-round" id="yellow-develop">Support</h2>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-6 col-lg-3">
             <h2 class="large-round" id="green-support">Develop</h2>
             <h2 class="large-round" id="blue-host">Host</h2>
         </div>
@@ -62,59 +62,114 @@
         <div class="col-12 col-md-6 col-lg-4 image-box">
 
 
-               <!--      THE LAPTOP WITH THE APPLES ON IT      -->
-            <img src="../img/assets/images/apple-ipad.jpg" class="large-image">
+            <div class="group1 groupProject">
+                   <!--      THE LAPTOP WITH THE APPLES ON IT      -->
+                <img src="../img/assets/images/apple-ipad.jpg" class="large-image">
 
-            <div class="img-description">
-                <div class="featured-project">
+                <div class="img-description">
+                    <div class="featured-project">
+
+                            <p>Featured Project</p>
+
+                    </div>
+                    <div class="icons">
+
+                        <span class="round red-d"><strong>D</strong></span>
+
+                        <span class="round orange-d"><strong>D</strong></span>
+
+                        <span class="round green-s"><strong>S</strong></span>
+
+                        <span class="round blue-h"><strong>H</strong></span>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="group2 groupProject">
+                <!--     THE FACE WITH THE BINARY       -->
+                <img src="../img/assets/images/man.jpg" class="large-image">
+
+                <div class="img-description">
+                    <div class="featured-project">
 
                         <p>Featured Project</p>
 
-                </div>
-                <div class="icons">
+                    </div>
+                    <div class="icons">
 
-                    <span class="round red-d"><strong>D</strong></span>
+                        <span class="round red-d"><strong>D</strong></span>
 
-                    <span class="round orange-d"><strong>D</strong></span>
+                        <span class="round orange-d"><strong>D</strong></span>
 
-                    <span class="round green-s"><strong>S</strong></span>
+                        <span class="round green-s"><strong>S</strong></span>
 
-                    <span class="round blue-h"><strong>H</strong></span>
+                        <span class="round blue-h"><strong>H</strong></span>
 
-                </div>
-            </div>
-
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 image-box">
-
-
-
-                <!--     THE LAPTOP WITH THE KEYBOARD AND IPAD ON TABLE       -->
-            <img src="../img/assets/images/macbook.jpg" class="large-image">
-
-            <div class="img-description">
-                <div class="featured-project">
-
-                    <p>Featured Project</p>
-
-                </div>
-                <div class="icons">
-
-                    <span class="round red-d"><strong>D</strong></span>
-
-                    <span class="round orange-d"><strong>D</strong></span>
-
-                    <span class="round green-s"><strong>S</strong></span>
-
-                    <span class="round blue-h"><strong>H</strong></span>
-
+                    </div>
                 </div>
             </div>
 
         </div>
         <div class="col-12 col-md-6 col-lg-4 image-box">
 
-            <div class="article-group">
+
+
+            <div class="group3 groupProject">
+                    <!--     THE LAPTOP WITH THE KEYBOARD AND IPAD ON TABLE       -->
+                <img src="../img/assets/images/macbook.jpg" class="large-image">
+
+                <div class="img-description">
+                    <div class="featured-project">
+
+                        <p>Featured Project</p>
+
+                    </div>
+                    <div class="icons">
+
+                        <span class="round red-d"><strong>D</strong></span>
+
+                        <span class="round orange-d"><strong>D</strong></span>
+
+                        <span class="round green-s"><strong>S</strong></span>
+
+                        <span class="round blue-h"><strong>H</strong></span>
+
+                    </div>
+                </div>
+            </div>
+
+           <!--    THE LAST TEXT HERE SOMEWHERE        -->
+
+
+            <div class="group4 groupProject">
+                  <!--     THE SECURITY BUTTON       -->
+                <img src="../img/assets/images/security.jpg" class="large-image">
+
+                <div class="img-description">
+                    <div class="featured-project">
+
+                        <p>Featured Project</p>
+
+                    </div>
+                    <div class="icons">
+
+                        <span class="round red-d"><strong>D</strong></span>
+
+                        <span class="round orange-d"><strong>D</strong></span>
+
+                        <span class="round green-s"><strong>S</strong></span>
+
+                        <span class="round blue-h"><strong>H</strong></span>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 image-box">
+
+            <div class="article-group group5">
                 <div class="article">
 
                     <img src="../img/assets/images/mobile-phone.jpg" class="small-image">
@@ -133,73 +188,15 @@
                     <img src="../img/assets/images/google-search.jpg" class="small-image">
                     <h3>How to Get Google to Like You</h3>
 
-
                 </div>
             </div>
+            <div class="group6">
 
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 image-box">
+                <h6><i class="fab fa-twitter"></i>Last Tweet</h6>
 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores doloremque necessitatibus repellendus sequi sint.</p>
 
-
-             <!--     THE FACE WITH THE BINARY       -->
-            <img src="../img/assets/images/man.jpg" class="large-image">
-
-            <div class="img-description">
-                <div class="featured-project">
-
-                    <p>Featured Project</p>
-
-                </div>
-                <div class="icons">
-
-                    <span class="round red-d"><strong>D</strong></span>
-
-                    <span class="round orange-d"><strong>D</strong></span>
-
-                    <span class="round green-s"><strong>S</strong></span>
-
-                    <span class="round blue-h"><strong>H</strong></span>
-
-                </div>
             </div>
-
-        </div>
-
-<!--        <h6>The Last</h6>-->
-
-        <div class="col-12 col-md-6 col-lg-4">
-
-
-
-              <!--     THE SECURITY BUTTON       -->
-            <img src="../img/assets/images/security.jpg" class="large-image">
-
-            <div class="img-description">
-                <div class="featured-project">
-
-                    <p>Featured Project</p>
-
-                </div>
-                <div class="icons">
-
-                    <span class="round red-d"><strong>D</strong></span>
-
-                    <span class="round orange-d"><strong>D</strong></span>
-
-                    <span class="round green-s"><strong>S</strong></span>
-
-                    <span class="round blue-h"><strong>H</strong></span>
-
-                </div>
-            </div>
-
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-
-            <h6><i class="fab fa-twitter"></i>Last Tweet</h6>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores doloremque necessitatibus repellendus sequi sint.</p>
 
         </div>
 
