codeup design in progress 3

--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><!-- TODO: put your title here --></title>
+    <title>Codeup Design Project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/codeup-design.css">
     <script src="https://kit.fontawesome.com/36f035c426.js" crossorigin="anonymous"></script>
@@ -40,166 +40,122 @@
     </nav>
 </div>
 <div class="container">
-    <h1>Visual Design & Web Development</h1>
+    <div class="top-header">
+        <h1>Visual Design & Web Development</h1>
 
-    <h3>From Park City, Utah</h3>
+        <h3>From Park City, Utah</h3>
 
-    <div class="row iconsAcrossTop">
-        <div class="col-6 col-lg-3">
-            <h2 class="large-round" id="red-design">Design</h2>
-            <h2 class="large-round" id="yellow-develop">Support</h2>
+        <div class="d-flex justify-content-center row iconsAcrossTop">
+            <div class="d-flex justify-content-center row col-6">
+                <div id="red-design" class="large-round col-lg-3">
+                    <h2>Design</h2>
+                </div>
+                <div id="green-support" class="large-round col-lg-3">
+                    <h2>Support</h2>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center row col-6">
+                <div id="yellow-develop" class="large-round col-lg-3">
+                    <h2>Develop</h2>
+                </div>
+                <div id="blue-host" class="large-round col-lg-3">
+                    <h2>Host</h2>
+                </div>
+            </div>
         </div>
-        <div class="col-6 col-lg-3">
-            <h2 class="large-round" id="green-support">Develop</h2>
-            <h2 class="large-round" id="blue-host">Host</h2>
-        </div>
+            <hr>
     </div>
 
     <h6>Selected Work</h6>
 
+    <h6>The Last</h6>
+
     <div class="row">
-
         <div class="col-12 col-md-6 col-lg-4 image-box">
-
-
             <div class="group1 groupProject">
-                   <!--      THE LAPTOP WITH THE APPLES ON IT      -->
+                <!--      THE LAPTOP WITH THE APPLES ON IT      -->
                 <img src="../img/assets/images/apple-ipad.jpg" class="large-image">
-
                 <div class="img-description">
                     <div class="featured-project">
-
-                            <p>Featured Project</p>
-
+                        <p>Featured Project</p>
                     </div>
                     <div class="icons">
-
                         <span class="round red-d"><strong>D</strong></span>
-
                         <span class="round orange-d"><strong>D</strong></span>
-
                         <span class="round green-s"><strong>S</strong></span>
-
                         <span class="round blue-h"><strong>H</strong></span>
-
                     </div>
                 </div>
             </div>
-
             <div class="group2 groupProject">
                 <!--     THE FACE WITH THE BINARY       -->
                 <img src="../img/assets/images/man.jpg" class="large-image">
-
                 <div class="img-description">
                     <div class="featured-project">
-
                         <p>Featured Project</p>
-
                     </div>
                     <div class="icons">
-
                         <span class="round red-d"><strong>D</strong></span>
-
                         <span class="round orange-d"><strong>D</strong></span>
-
                         <span class="round green-s"><strong>S</strong></span>
-
                         <span class="round blue-h"><strong>H</strong></span>
-
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="col-12 col-md-6 col-lg-4 image-box">
-
-
-
             <div class="group3 groupProject">
-                    <!--     THE LAPTOP WITH THE KEYBOARD AND IPAD ON TABLE       -->
+                <!--     THE LAPTOP WITH THE KEYBOARD AND IPAD ON TABLE       -->
                 <img src="../img/assets/images/macbook.jpg" class="large-image">
-
                 <div class="img-description">
                     <div class="featured-project">
-
                         <p>Featured Project</p>
-
                     </div>
                     <div class="icons">
-
                         <span class="round red-d"><strong>D</strong></span>
-
                         <span class="round orange-d"><strong>D</strong></span>
-
                         <span class="round green-s"><strong>S</strong></span>
-
                         <span class="round blue-h"><strong>H</strong></span>
-
                     </div>
                 </div>
             </div>
-
-           <!--    THE LAST TEXT HERE SOMEWHERE        -->
-
-
+            <!--    THE LAST TEXT HERE SOMEWHERE        -->
             <div class="group4 groupProject">
-                  <!--     THE SECURITY BUTTON       -->
+                <!--     THE SECURITY BUTTON       -->
                 <img src="../img/assets/images/security.jpg" class="large-image">
-
                 <div class="img-description">
                     <div class="featured-project">
-
                         <p>Featured Project</p>
-
                     </div>
                     <div class="icons">
-
                         <span class="round red-d"><strong>D</strong></span>
-
                         <span class="round orange-d"><strong>D</strong></span>
-
                         <span class="round green-s"><strong>S</strong></span>
-
                         <span class="round blue-h"><strong>H</strong></span>
-
                     </div>
                 </div>
             </div>
-
         </div>
         <div class="col-12 col-md-6 col-lg-4 image-box">
-
             <div class="article-group group5">
                 <div class="article">
-
                     <img src="../img/assets/images/mobile-phone.jpg" class="small-image">
                     <h3>The Admin Bar and Absolute Positioning</h3>
-
                 </div>
                 <div class="article">
-
                     <img src="../img/assets/images/head.jpg" class="small-image">
                     <h3>Nibbler Awesome Website Testing</h3>
-
-
                 </div>
                 <div class="article">
-
                     <img src="../img/assets/images/google-search.jpg" class="small-image">
                     <h3>How to Get Google to Like You</h3>
-
                 </div>
             </div>
             <div class="group6">
-
                 <h6><i class="fab fa-twitter"></i>Last Tweet</h6>
-
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores doloremque necessitatibus repellendus sequi sint.</p>
-
             </div>
-
         </div>
-
     </div>
 
 
