--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -7,6 +7,7 @@
     <title>Codeup Design Project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/codeup-design.css">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/36f035c426.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -41,34 +42,39 @@
 </div>
 <div class="container">
     <div class="top-header">
-        <h1>Visual Design & Web Development</h1>
+        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
 
-        <h3>From Park City, Utah</h3>
+        <h2>FROM PARK CITY, UTAH</h2>
 
-        <div class="d-flex justify-content-center row iconsAcrossTop">
+        <div class="d-flex justify-content-end row iconsAcrossTop">
             <div class="d-flex justify-content-center row col-6">
                 <div id="red-design" class="large-round col-lg-3">
-                    <h2>Design</h2>
+                    <h2>DESIGN</h2>
                 </div>
                 <div id="green-support" class="large-round col-lg-3">
-                    <h2>Support</h2>
+                    <h2>SUPPORT</h2>
                 </div>
             </div>
-            <div class="d-flex justify-content-center row col-6">
+            <div class="d-flex justify-content-start row col-6">
                 <div id="yellow-develop" class="large-round col-lg-3">
-                    <h2>Develop</h2>
+                    <h2>DEVELOP</h2>
                 </div>
                 <div id="blue-host" class="large-round col-lg-3">
-                    <h2>Host</h2>
+                    <h2>HOST</h2>
                 </div>
             </div>
         </div>
             <hr>
     </div>
 
-    <h6>Selected Work</h6>
-
-    <h6>The Last</h6>
+    <div class="headers row">
+        <div class="smallHeader col-lg-8">
+            <h6>SELECTED WORK</h6>
+        </div>
+        <div class="col-lg-4">
+            <h6 class="maxViewHeader">THE LAST</h6>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 image-box">
@@ -87,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="group2 groupProject">
+            <div class="group2 groupProject notFirst">
                 <!--     THE FACE WITH THE BINARY       -->
                 <img src="../img/assets/images/man.jpg" class="large-image">
                 <div class="img-description">
@@ -103,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 image-box">
+        <div class="col-12 col-md-6 col-lg-4 image-box  notFirst">
             <div class="group3 groupProject">
                 <!--     THE LAPTOP WITH THE KEYBOARD AND IPAD ON TABLE       -->
                 <img src="../img/assets/images/macbook.jpg" class="large-image">
@@ -136,19 +142,19 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 image-box">
+        <div class="col-12 col-md-6 col-lg-4 image-box image-box-last  notFirst">
             <div class="article-group group5">
                 <div class="article">
                     <img src="../img/assets/images/mobile-phone.jpg" class="small-image">
-                    <h3>The Admin Bar and Absolute Positioning</h3>
+                    <h3 class="article-heading">The Admin Bar and Absolute Positioning</h3>
                 </div>
                 <div class="article">
                     <img src="../img/assets/images/head.jpg" class="small-image">
-                    <h3>Nibbler Awesome Website Testing</h3>
+                    <h3 class="article-heading">Nibbler Awesome Website Testing</h3>
                 </div>
                 <div class="article">
                     <img src="../img/assets/images/google-search.jpg" class="small-image">
-                    <h3>How to Get Google to Like You</h3>
+                    <h3 class="article-heading">How to Get Google to Like You</h3>
                 </div>
             </div>
             <div class="group6">
