working on wrapping the upper section icons

--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -46,24 +46,42 @@
 
         <h2>FROM PARK CITY, UTAH</h2>
 
-        <div class="d-flex justify-content-end row iconsAcrossTop">
-            <div class="d-flex justify-content-center row col-6">
-                <div id="red-design" class="large-round col-lg-3">
+        <div class="d-flex justify-content-end iconsAcrossTop">
+            <div class="d-flex justify-content-center">
+                <div id="red-design" class="large-round">
                     <h2>DESIGN</h2>
                 </div>
-                <div id="green-support" class="large-round col-lg-3">
+                <div id="green-support" class="large-round">
                     <h2>SUPPORT</h2>
                 </div>
             </div>
-            <div class="d-flex justify-content-start row col-6">
-                <div id="yellow-develop" class="large-round col-lg-3">
+            <div class="d-flex justify-content-start wrappingIcons">
+                <div id="yellow-develop" class="large-round">
                     <h2>DEVELOP</h2>
                 </div>
-                <div id="blue-host" class="large-round col-lg-3">
+                <div id="blue-host" class="large-round">
                     <h2>HOST</h2>
                 </div>
             </div>
         </div>
+<!--        <div class="d-flex justify-content-end row iconsAcrossTop">-->
+<!--            <div class="d-flex justify-content-center row col-6">-->
+<!--                <div id="red-design" class="large-round col-lg-3">-->
+<!--                    <h2>DESIGN</h2>-->
+<!--                </div>-->
+<!--                <div id="green-support" class="large-round col-lg-3">-->
+<!--                    <h2>SUPPORT</h2>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="d-flex justify-content-start row col-6">-->
+<!--                <div id="yellow-develop" class="large-round col-lg-3">-->
+<!--                    <h2>DEVELOP</h2>-->
+<!--                </div>-->
+<!--                <div id="blue-host" class="large-round col-lg-3">-->
+<!--                    <h2>HOST</h2>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
             <hr>
     </div>
 
