added some css touch ups

--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -101,7 +101,7 @@
                 <img src="../img/assets/images/apple-ipad.jpg" class="large-image">
                 <div class="img-description">
                     <div class="featured-project">
-                        <p>Featured Project</p>
+                        <p class="feature">Featured Project</p>
                     </div>
                     <div class="icons">
                         <span class="round red-d"><strong>D</strong></span>
@@ -116,7 +116,7 @@
                 <img src="../img/assets/images/man.jpg" class="large-image">
                 <div class="img-description">
                     <div class="featured-project">
-                        <p>Featured Project</p>
+                        <p class="feature">Featured Project</p>
                     </div>
                     <div class="icons">
                         <span class="round red-d"><strong>D</strong></span>
@@ -133,7 +133,7 @@
                 <img src="../img/assets/images/macbook.jpg" class="large-image">
                 <div class="img-description">
                     <div class="featured-project">
-                        <p>Featured Project</p>
+                        <p class="feature">Featured Project</p>
                     </div>
                     <div class="icons">
                         <span class="round red-d"><strong>D</strong></span>
@@ -149,7 +149,7 @@
                 <img src="../img/assets/images/security.jpg" class="large-image">
                 <div class="img-description">
                     <div class="featured-project">
-                        <p>Featured Project</p>
+                        <p class="feature">Featured Project</p>
                     </div>
                     <div class="icons">
                         <span class="round red-d"><strong>D</strong></span>
@@ -176,8 +176,11 @@
                 </div>
             </div>
             <div class="group6">
-                <h6><i class="fab fa-twitter"></i>Last Tweet</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores doloremque necessitatibus repellendus sequi sint.</p>
+                <div class="twitter-heading">
+                    <i class="fab fa-twitter"></i>
+                    <h6><strong>Last Tweet</strong></h6>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores.</p>
             </div>
         </div>
     </div>
