added adjustments to the size of the image at the 1200 px range and comments on what to do to finish

--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -184,7 +184,7 @@
             </div>
         </div>
     </div>
-
+<!--NEED TO ADJUST THE HEIGHT OF THE RIGHT SIDE SECTION TO MATCH WHEN AT 1200 PX BROWSER SIZE AND FIX THE TOP CIRCLES TO WRAP AT MOBILE SIZE-->
 
 </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
