finshed mobile layout, minor adjustments needed in the article group

--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -43,45 +43,28 @@
 <div class="container">
     <div class="top-header">
         <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+        <div class="subHeading">
+            <h2>FROM PARK CITY, UTAH</h2>
+        </div>
 
-        <h2>FROM PARK CITY, UTAH</h2>
-
-        <div class="d-flex justify-content-end iconsAcrossTop">
+        <div class="d-flex justify-content-center iconsAcrossTop">
             <div class="d-flex justify-content-center">
                 <div id="red-design" class="large-round">
                     <h2>DESIGN</h2>
                 </div>
-                <div id="green-support" class="large-round">
-                    <h2>SUPPORT</h2>
-                </div>
-            </div>
-            <div class="d-flex justify-content-start wrappingIcons">
                 <div id="yellow-develop" class="large-round">
                     <h2>DEVELOP</h2>
+                </div>
+            </div>
+            <div class="d-flex justify-content-start">
+                <div id="green-support" class="large-round">
+                    <h2>SUPPORT</h2>
                 </div>
                 <div id="blue-host" class="large-round">
                     <h2>HOST</h2>
                 </div>
             </div>
         </div>
-<!--        <div class="d-flex justify-content-end row iconsAcrossTop">-->
-<!--            <div class="d-flex justify-content-center row col-6">-->
-<!--                <div id="red-design" class="large-round col-lg-3">-->
-<!--                    <h2>DESIGN</h2>-->
-<!--                </div>-->
-<!--                <div id="green-support" class="large-round col-lg-3">-->
-<!--                    <h2>SUPPORT</h2>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="d-flex justify-content-start row col-6">-->
-<!--                <div id="yellow-develop" class="large-round col-lg-3">-->
-<!--                    <h2>DEVELOP</h2>-->
-<!--                </div>-->
-<!--                <div id="blue-host" class="large-round col-lg-3">-->
-<!--                    <h2>HOST</h2>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
             <hr>
     </div>
 
@@ -164,15 +147,15 @@
             <div class="article-group group5">
                 <div class="article">
                     <img src="../img/assets/images/mobile-phone.jpg" class="small-image">
-                    <h3 class="article-heading">The Admin Bar and Absolute Positioning</h3>
+                    <h3 class="article-heading">The Admin Bar and<br> Absolute Positioning</h3>
                 </div>
                 <div class="article">
                     <img src="../img/assets/images/head.jpg" class="small-image">
-                    <h3 class="article-heading">Nibbler Awesome Website Testing</h3>
+                    <h3 class="article-heading">Nibbler Awesome<br> Website Testing</h3>
                 </div>
                 <div class="article">
                     <img src="../img/assets/images/google-search.jpg" class="small-image">
-                    <h3 class="article-heading">How to Get Google to Like You</h3>
+                    <h3 class="article-heading">How to Get Google to<br> Like You</h3>
                 </div>
             </div>
             <div class="group6">
