--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -163,11 +163,10 @@
                     <i class="fab fa-twitter"></i>
                     <h6><strong>Last Tweet</strong></h6>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores.</p>
+                <p>Lorem ipsum dolor sit amet up updd, consectetur adipisicing elit up up dfdup. Aperiam asperiores up up.</p>
             </div>
         </div>
     </div>
-<!--NEED TO ADJUST THE HEIGHT OF THE RIGHT SIDE SECTION TO MATCH WHEN AT 1200 PX BROWSER SIZE AND FIX THE TOP CIRCLES TO WRAP AT MOBILE SIZE-->
 
 </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
