changed image on google like you article

--- a/HTML/codeup-design.html
+++ b/HTML/codeup-design.html
@@ -154,7 +154,7 @@
                     <h3 class="article-heading">Nibbler Awesome<br> Website Testing</h3>
                 </div>
                 <div class="article">
-                    <img src="../img/assets/images/google-search.jpg" class="small-image">
+                    <img src="../img/assets/images/ipad.jpg" class="small-image">
                     <h3 class="article-heading">How to Get Google to<br> Like You</h3>
                 </div>
             </div>
